--- a/.codefresh/codefresh-pr-cleanup.yml
+++ b/.codefresh/codefresh-pr-cleanup.yml
@@ -5,4 +5,4 @@ steps:
     image: codefresh/cfstep-helm
     commands:
       - kubectl config use-context sales-demo
-      - helm delete ${{PULL_REQUEST_NUMBER}}-${{CFBRANCH_TAG_NORMALIZED}}-${{CF_REPO_NAME}} --purge
+      - helm delete ${{CFBRANCH_TAG_NORMALIZED}}-${{CF_PULL_REQUEST_NUMBER}}-${{CF_REPO_NAME}} --purge
