--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -117,7 +117,7 @@ steps:
     title: Sending Slack Notification for Pull Request Environment
     image: cloudposse/slack-notifier
     environment:
-      - SLACK_WEBHOOK_URL="https://hooks.slack.com/services/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"
+      - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
       - SLACK_USER_NAME=codefresh
       - SLACK_ICON_EMOJI=":codefresh:"
       - SLACK_TITLE="Pull Request Environment Deployed for ${{CF_BRANCH}}"
@@ -125,10 +125,10 @@ steps:
       - SLACK_FOOTER_ICON="https://cloudposse.com/wp-content/uploads/sites/29/2018/02/kubernetes.png"
       - SLACK_FIELD1_TITLE="Environment"
       - SLACK_FIELD1_VALUE="Pull Request"
-      - SLACK_FIELD1_SHORT="true"
+      - SLACK_FIELD1_SHORT=true
       - SLACK_FIELD2_TITLE="Version"
       - SLACK_FIELD2_VALUE="${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}"
-      - SLACK_FIELD2_SHORT="true"
+      - SLACK_FIELD2_SHORT=true
     when:
       condition:
         any:
