--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -119,10 +119,10 @@ steps:
     environment:
       - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
       - SLACK_USER_NAME=codefresh
-      - SLACK_ICON_EMOJI=':codefresh:'
+      - SLACK_ICON_EMOJI=:codefresh::
       - SLACK_TITLE=Pull Request Environment Deployed for ${{CF_BRANCH}}
       - SLACK_TITLE_LINK=https://g.codefresh.io/helm/releases/sales-demo@FirstKubernetes/kube-system/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_PULL_REQUEST_NUMBER}}-${{CF_REPO_NAME}}/services
-      - SLACK_FOOTER_ICON=https://www.cncf.io/wp-content/uploads/2018/06/helm-icon.svg
+      - SLACK_FOOTER_ICON=https://pbs.twimg.com/profile_images/859843681553178624/AHcBc6EG_400x400.jpg
       - SLACK_THUMB_URL=https://pbs.twimg.com/profile_images/699752011428810753/ayRqrKW1_400x400.png
       - SLACK_FOOTER=Helm Deploy of example-voting-app
       - SLACK_FIELD1_TITLE=Environment
