--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -119,7 +119,7 @@ steps:
     environment:
       - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
       - SLACK_USER_NAME=codefresh
-      - SLACK_ICON_EMOJI=:codefresh::
+      - "SLACK_ICON_EMOJI=:superfresh:"
       - SLACK_TITLE=Pull Request Environment Deployed for ${{CF_BRANCH}}
       - SLACK_TITLE_LINK=https://g.codefresh.io/helm/releases/sales-demo@FirstKubernetes/kube-system/${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_PULL_REQUEST_NUMBER}}-${{CF_REPO_NAME}}/services
       - SLACK_FOOTER_ICON=https://pbs.twimg.com/profile_images/859843681553178624/AHcBc6EG_400x400.jpg
@@ -190,10 +190,11 @@ steps:
     environment:
       - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
       - SLACK_USER_NAME=codefresh
-      - SLACK_ICON_EMOJI=codefresh
+      - "SLACK_ICON_EMOJI=:superfresh:"
       - SLACK_TITLE=Staging Upgraded
       - SLACK_TITLE_LINK=https://g.codefresh.io/helm/releases/sales-demo@FirstKubernetes/kube-system/example-voting-app/services
-      - SLACK_FOOTER_ICON=https://cloudposse.com/wp-content/uploads/sites/29/2018/02/kubernetes.png
+      - SLACK_FOOTER_ICON=https://pbs.twimg.com/profile_images/859843681553178624/AHcBc6EG_400x400.jpg
+      - SLACK_THUMB_URL=https://pbs.twimg.com/profile_images/699752011428810753/ayRqrKW1_400x400.png
       - SLACK_FIELD1_TITLE=Environment
       - SLACK_FIELD1_VALUE=Staging
       - SLACK_FIELD1_SHORT=true
@@ -247,10 +248,11 @@ steps:
     environment:
       - SLACK_WEBHOOK_URL=https://hooks.slack.com/services/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
       - SLACK_USER_NAME=codefresh
-      - SLACK_ICON_EMOJI=codefresh
+      - "SLACK_ICON_EMOJI=:superfresh:"
       - SLACK_TITLE=Production Upgraded
       - SLACK_TITLE_LINK=https://g.codefresh.io/helm/releases/sales-demo@FirstKubernetes/kube-system/example-voting-app/services
-      - SLACK_FOOTER_ICON=https://cloudposse.com/wp-content/uploads/sites/29/2018/02/kubernetes.png
+      - SLACK_FOOTER_ICON=https://pbs.twimg.com/profile_images/859843681553178624/AHcBc6EG_400x400.jpg
+      - SLACK_THUMB_URL=https://pbs.twimg.com/profile_images/699752011428810753/ayRqrKW1_400x400.png
       - SLACK_FIELD1_TITLE=Environment
       - SLACK_FIELD1_VALUE=Production
       - SLACK_FIELD1_SHORT=true
