update for better tracking

--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -147,6 +147,7 @@ steps:
     environment:
       - ACTION=push
       - CHART_REF=example-voting-app
+      - CHART_VERSION=${{CF_RELEASE_TAG}}
     when:
       branch:
         only:
@@ -158,6 +159,7 @@ steps:
     working_directory: ./
     environment:
       - CHART_REF=example-voting-app
+      - CHART_VERSION=${{CF_RELEASE_TAG}}
       - RELEASE_NAME=example-voting-app
       - KUBE_CONTEXT=sales-demo@FirstKubernetes
       - NAMESPACE=dustinvb-staging
@@ -208,6 +210,8 @@ steps:
       - SLACK_FIELD2_TITLE=Version
       - SLACK_FIELD2_VALUE=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
       - SLACK_FIELD2_SHORT=true
+      - SLACK_FIELD3_TITLE=GitHub Release
+      - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
     when:
       condition:
         all:
@@ -220,6 +224,7 @@ steps:
     working_directory: ./
     environment:
       - CHART_REF=example-voting-app
+      - CHART_VERSION=${{CF_RELEASE_TAG}}
       - RELEASE_NAME=example-voting-app
       - KUBE_CONTEXT=sales-prod@FirstKubernetes
       - NAMESPACE=dustinvb-production
@@ -270,6 +275,8 @@ steps:
       - SLACK_FIELD2_TITLE=Version
       - SLACK_FIELD2_VALUE=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
       - SLACK_FIELD2_SHORT=true
+      - SLACK_FIELD3_TITLE=GitHub Release
+      - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
     when:
       condition:
         all:
