--- a/.codefresh/codefresh-cd.yml
+++ b/.codefresh/codefresh-cd.yml
@@ -209,7 +209,7 @@ steps:
       - SLACK_FIELD1_VALUE=Staging
       - SLACK_FIELD1_SHORT=true
       - SLACK_FIELD2_TITLE=Version
-      - SLACK_FIELD2_VALUE=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      - SLACK_FIELD2_VALUE=${{CF_RELEASE_TAG}}
       - SLACK_FIELD2_SHORT=true
       - "SLACK_FIELD3_TITLE=:github: GitHub Release"
       - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
@@ -274,7 +274,7 @@ steps:
       - SLACK_FIELD1_VALUE=Production
       - SLACK_FIELD1_SHORT=true
       - SLACK_FIELD2_TITLE=Version
-      - SLACK_FIELD2_VALUE=${{CF_BRANCH_TAG_NORMALIZED}}-${{CF_SHORT_REVISION}}
+      - SLACK_FIELD2_VALUE=${{CF_RELEASE_TAG}}
       - SLACK_FIELD2_SHORT=true
       - "SLACK_FIELD3_TITLE=:github: GitHub Release"
       - SLACK_FIELD3_VALUE=https://github.com/${{CF_REPO_OWNER}}/${{CF_REPO_NAME}}/releases/tag/${{CF_RELEASE_TAG}}
